linear resource allocation model annotations.

--- a/notebooks/LinearAllocationModel.ipynb
+++ b/notebooks/LinearAllocationModel.ipynb
@@ -584,6 +584,7 @@
     }
    ],
    "source": [
+    "# Plot the proteome fractions as a function of the max ribosome fraction\n",
     "plt.figure(figsize=(8,6))\n",
     "for c in opt_phis.columns:\n",
     "    plt.scatter(max_phi_rs, opt_phis[c], label=c, s=10)\n",
@@ -592,7 +593,9 @@
     "plt.xlabel('max ribosome fraction $\\phi_R$', fontsize=10)\n",
     "plt.ylabel('proteome fraction $\\phi_i$', fontsize=10)\n",
     "plt.savefig('../output/linear_model_overflow.png', facecolor='w', dpi=600)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Not sure what leads to that discontinuity..."
    ]
   },
   {
@@ -614,6 +617,8 @@
     }
    ],
    "source": [
+    "# Plot the individual fluxes as a function of max ribosome fraction\n",
+    "# these are related to the proteome fractions by the v_i values.\n",
     "plt.figure(figsize=(8,6))\n",
     "for c in opt_js.columns[1:]:\n",
     "    plt.scatter(max_phi_rs, opt_js[c], label=c, s=10)\n",
