additional biomass and lipid analyses

--- a/notebooks/06_EstimateProteomeNADHConsumption.ipynb
+++ b/notebooks/06_EstimateProteomeNADHConsumption.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "$0.05 \\frac{mol \\text{ C}}{g \\text{ protein}} \\times 0.5 \\frac{g \\text{ protein}}{gDW} = 2.5\\times 10^{-2} \\frac{mol \\text{ C}}{gDW}$\n",
     "\n",
-    "Now if this protein-bound C has $Z_C^{P} ≈ -0.2$, say, then 0.2 electron equivalents = 0.1 NADH are required for its synthesis (NADH is a 2 e- carrier). Moreover, it must be synthesized at a rate at least equaling the growth rate $\\mu$. Hence: \n",
+    "Now if this protein-bound C has $Z_C^{P} ≈ -0.2$, say, then 0.2 electron equivalents = 0.1 NADH are required for its synthesis (NADH is a 2 e- carrier). Moreover, it must be synthesized at a rate equaling the growth rate $\\mu$. Hence: \n",
     "\n",
     "$J_{NADH}^{proteome} \\approx \\frac{-Z_C^{P} \\mu}{2} \\times 25 \\frac{mmol \\text{ NADH}}{gDW \\times hr}$\n",
     "\n",
@@ -33,7 +33,11 @@
     "\n",
     "$J_{NADH}^{proteome} \\approx 0.9 \\frac{mmol \\text{ NADH}}{gDW \\times hr}$ \n",
     "\n",
-    "This value can be compared to an O2 respiratory rate measured for *E. coli* or Yeast. Postma et al. 1989 report a value of ≈10 mmol $O_2$ / gDW / hr at a growth rate of 0.35. $O_2$ accepts 4 e- to form water, meaning that 2 NADH are required per $O_2$. Hence the respiratory rate amounts to ≈20 mmol NADH / gDW / hr when $\\mu = 0.35$. So protein biosynthesis accounts for $\\frac{0.9}{20} ≈ 4.5\\%$ of respiratory NADH consumption. "
+    "This value can be compared to an O2 respiratory rate measured for *E. coli* or Yeast. Postma et al. 1989 report a value of ≈10 mmol $O_2$ / gDW / hr at a growth rate of 0.35. $O_2$ accepts 4 e- to form water, meaning that 2 NADH are required per $O_2$. Hence the respiratory rate amounts to ≈20 mmol NADH / gDW / hr when $\\mu = 0.35$. So protein biosynthesis accounts for $\\frac{0.9}{20} ≈ 4.5\\%$ of respiratory NADH consumption. More detailed calculations below give a similar number. \n",
+    "\n",
+    "# TODO\n",
+    "\n",
+    "According to Dennis & Bremer, protein content of biomass is decreasing linearly with the growth rate from 60+% at low growth rates to 45% or so at very high rates. Our estimate ignores this co-variation. Should correct. "
    ]
   },
   {
@@ -57,7 +61,7 @@
     }
    ],
    "source": [
-    "# Use the E. coli data to estimate the molar mass of a protein-bound amino acid in the proteome\n",
+    "# Use the E. coli data to estimate the molar mass of a protein-bound amino acid in the E. coli proteome\n",
     "chure_mean_df = pd.read_csv('../data/proteomes/Coli/Chure_mean_absolute_measurements.csv')\n",
     "chure_mean_df['tot_mw'] = chure_mean_df.copies_per_cell*chure_mean_df.mw_daltons\n",
     "chure_mean_df['tot_aas'] = chure_mean_df.copies_per_cell*chure_mean_df.num_aas\n",
