--- a/notebooks/RUN_ALL.ipynb
+++ b/notebooks/RUN_ALL.ipynb
@@ -266,7 +266,9 @@
     "!jupyter nbconvert --execute 05_GeneticCodeAnalysis.ipynb --to notebook --output-dir jupyter_tmp\n",
     "!jupyter nbconvert --execute 06_EstimateProteomeNADHConsumption.ipynb --to notebook --output-dir jupyter_tmp\n",
     "!jupyter nbconvert --execute 07_PCA_analysis.ipynb --to notebook --output-dir jupyter_tmp\n",
-    "!jupyter nbconvert --execute 08_ProteomeBinning.ipynb --to notebook --output-dir jupyter_tmp"
+    "!jupyter nbconvert --execute 08_ProteomeBinning.ipynb --to notebook --output-dir jupyter_tmp\n",
+    "!jupyter nbconvert --execute 09_lipids_analysis.ipynb --to notebook --output-dir jupyter_tmp\n",
+    "!jupyter nbconvert --execute 10_biomass_elemental_composition.ipynb --to notebook --output-dir jupyter_tmp"
    ]
   },
   {
