--- a/notebooks/03_CyanoProteomeNOSC.ipynb
+++ b/notebooks/03_CyanoProteomeNOSC.ipynb
@@ -226,17 +226,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Q6ZEM5:Q6YRW8', 'Q6YRW7:Q6ZEM6', 'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6', 'P74195:P74627:P74059', 'P74732', 'Q6YRS8:P73838', 'P73009:P74083', 'P73037', 'P74303', 'P73734'}\n",
+      "{'P74303', 'P73037', 'P74195:P74627:P74059', 'Q6YRS8:P73838', 'P74732', 'P73734', 'P73009:P74083', 'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6', 'Q6YRW7:Q6ZEM6', 'Q6ZEM5:Q6YRW8'}\n",
       "10 not found\n",
       "Adding fictional IDs for those representing a mixture of isoforms\n",
-      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
-      "Adding fictional protein for Q6YRW7:Q6ZEM6 representing 2 isoforms\n",
-      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
       "Adding fictional protein for P74195:P74627:P74059 representing 3 isoforms\n",
       "Adding fictional protein for Q6YRS8:P73838 representing 2 isoforms\n",
       "Adding fictional protein for P73009:P74083 representing 2 isoforms\n",
+      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
+      "Adding fictional protein for Q6YRW7:Q6ZEM6 representing 2 isoforms\n",
+      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
       "After update, missing 4 IDs\n",
-      "{'P74303', 'P73037', 'P74732', 'P73734'}\n"
+      "{'P74303', 'P73037', 'P73734', 'P74732'}\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
     "        if x in lookup_table.index:\n",
     "            row = lookup_table.loc[x]\n",
     "            NCs.append(row.NC)\n",
-    "            Ces.append(row.Ce_total)\n",
+    "            Ces.append(row.Ce)\n",
     "            \n",
     "    if len(NCs) == 0:\n",
     "        continue\n",
@@ -275,7 +275,7 @@
     "    \n",
     "    NC = np.mean(NCs)\n",
     "    Ce = np.mean(Ces)\n",
-    "    fake_protein = dict(primary_accession=my_id, NC=NC, Ce_total=Ce, NOSC=(Ce/NC))\n",
+    "    fake_protein = dict(primary_accession=my_id, NC=NC, Ce=Ce, NOSC=(Ce/NC))\n",
     "    fakes.append(fake_protein)\n",
     "    \n",
     "extended_nosc_df = nosc_df.append(fakes, ignore_index=True)\n",
@@ -360,7 +360,9 @@
        "      <th>Ce_total</th>\n",
        "      <th>NOSC</th>\n",
        "      <th>fraction_transmembrane</th>\n",
+       "      <th>fraction_transmembrane_C</th>\n",
        "      <th>condition</th>\n",
+       "      <th>growth_mode</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -378,7 +380,9 @@
        "      <td>-28152.663281</td>\n",
        "      <td>-0.155937</td>\n",
        "      <td>0.177515</td>\n",
+       "      <td>0.183855</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -394,7 +398,9 @@
        "      <td>-1918.564290</td>\n",
        "      <td>-0.147384</td>\n",
        "      <td>0.172840</td>\n",
+       "      <td>0.180556</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -410,7 +416,9 @@
        "      <td>-18334.411852</td>\n",
        "      <td>-0.192899</td>\n",
        "      <td>0.241477</td>\n",
+       "      <td>0.235991</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -426,7 +434,9 @@
        "      <td>-27221.185676</td>\n",
        "      <td>-0.192627</td>\n",
        "      <td>0.195652</td>\n",
+       "      <td>0.204536</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -442,7 +452,9 @@
        "      <td>-363.397791</td>\n",
        "      <td>-0.182331</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -463,12 +475,19 @@
        "3                       27.5        60.468680  2337.0 -450.17  141315.305160   \n",
        "4                       27.5         1.255867  1587.0 -289.36    1993.061564   \n",
        "\n",
-       "       Ce_total      NOSC  fraction_transmembrane         condition  \n",
-       "0 -28152.663281 -0.155937                0.177515  photobio_27.5_uE  \n",
-       "1  -1918.564290 -0.147384                0.172840  photobio_27.5_uE  \n",
-       "2 -18334.411852 -0.192899                0.241477  photobio_27.5_uE  \n",
-       "3 -27221.185676 -0.192627                0.195652  photobio_27.5_uE  \n",
-       "4   -363.397791 -0.182331                0.000000  photobio_27.5_uE  "
+       "       Ce_total      NOSC  fraction_transmembrane  fraction_transmembrane_C  \\\n",
+       "0 -28152.663281 -0.155937                0.177515                  0.183855   \n",
+       "1  -1918.564290 -0.147384                0.172840                  0.180556   \n",
+       "2 -18334.411852 -0.192899                0.241477                  0.235991   \n",
+       "3 -27221.185676 -0.192627                0.195652                  0.204536   \n",
+       "4   -363.397791 -0.182331                0.000000                  0.000000   \n",
+       "\n",
+       "          condition      growth_mode  \n",
+       "0  photobio_27.5_uE  photobioreactor  \n",
+       "1  photobio_27.5_uE  photobioreactor  \n",
+       "2  photobio_27.5_uE  photobioreactor  \n",
+       "3  photobio_27.5_uE  photobioreactor  \n",
+       "4  photobio_27.5_uE  photobioreactor  "
       ]
      },
      "execution_count": 5,
@@ -496,17 +515,24 @@
     "my_nosc_df = pd.concat([extended_nosc_df, empty_rows]).set_index('primary_accession')\n",
     "\n",
     "NCs = my_nosc_df.loc[long_abund_df.majority_protein_ids].NC.values\n",
-    "Ces = my_nosc_df.loc[long_abund_df.majority_protein_ids].Ce_total.values\n",
+    "Ces = my_nosc_df.loc[long_abund_df.majority_protein_ids].Ce.values\n",
     "NOSCs = my_nosc_df.loc[long_abund_df.majority_protein_ids].NOSC.values\n",
     "ftm = my_nosc_df.loc[long_abund_df.majority_protein_ids].fraction_transmembrane.values\n",
+    "ftmC = my_nosc_df.loc[long_abund_df.majority_protein_ids].fraction_transmembrane_C.values\n",
     "long_abund_df['NC_per'] = NCs\n",
     "long_abund_df['Ce_per'] = Ces\n",
     "long_abund_df['NC_total'] = long_abund_df.copies_per_cell.multiply(NCs)\n",
     "long_abund_df['Ce_total'] = long_abund_df.copies_per_cell.multiply(Ces)\n",
     "long_abund_df['NOSC'] = NOSCs \n",
     "long_abund_df['fraction_transmembrane'] = ftm \n",
+    "long_abund_df['fraction_transmembrane_C'] = ftmC \n",
     "long_abund_df['condition'] = (\n",
     "    'photobio_' + long_abund_df.red_light_intensity_uE_m_s.astype(str).values + '_uE')\n",
+    "\n",
+    "# Add annotation of the growth mode -- here photobioreactors in turbidostat mode\n",
+    "long_abund_df['growth_mode'] = 'photobioreactor'\n",
+    "# Add annotation of stress conds -- these are all growth in variable light conds\n",
+    "long_abund_df['stress'] = False\n",
     "\n",
     "# convert to daltons\n",
     "long_abund_df.mw_daltons *= 1000\n",
@@ -663,7 +689,7 @@
     "# copies/ul = 6.02e23 copies/mol * fg/ul / (fg/mol)\n",
     "copies_per_ul = raw_abund_df[data_cols].loc[shared_ids].multiply(6.02e23/mws_fg_mol, axis=0)\n",
     "\n",
-    "Ces = my_nosc_df.loc[shared_ids].Ce_total.values\n",
+    "Ces = my_nosc_df.loc[shared_ids].Ce.values\n",
     "NCs = my_nosc_df.loc[shared_ids].NC.values\n",
     "Ce_total = copies_per_ul.multiply(Ces, axis=0)\n",
     "NC_total = copies_per_ul.multiply(NCs, axis=0)\n",
@@ -731,7 +757,9 @@
        "      <th>Ce_total</th>\n",
        "      <th>NOSC</th>\n",
        "      <th>fraction_transmembrane</th>\n",
+       "      <th>fraction_transmembrane_C</th>\n",
        "      <th>condition</th>\n",
+       "      <th>growth_mode</th>\n",
        "      <th>dataset</th>\n",
        "      <th>strain</th>\n",
        "      <th>species</th>\n",
@@ -754,7 +782,9 @@
        "      <td>-28152.663281</td>\n",
        "      <td>-0.155937</td>\n",
        "      <td>0.177515</td>\n",
+       "      <td>0.183855</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -775,7 +805,9 @@
        "      <td>-1918.564290</td>\n",
        "      <td>-0.147384</td>\n",
        "      <td>0.172840</td>\n",
+       "      <td>0.180556</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -796,7 +828,9 @@
        "      <td>-18334.411852</td>\n",
        "      <td>-0.192899</td>\n",
        "      <td>0.241477</td>\n",
+       "      <td>0.235991</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -817,7 +851,9 @@
        "      <td>-27221.185676</td>\n",
        "      <td>-0.192627</td>\n",
        "      <td>0.195652</td>\n",
+       "      <td>0.204536</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -838,7 +874,9 @@
        "      <td>-363.397791</td>\n",
        "      <td>-0.182331</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -847,6 +885,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -880,7 +920,9 @@
        "      <td>-43.019377</td>\n",
        "      <td>-0.131433</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -901,7 +943,9 @@
        "      <td>-50.290401</td>\n",
        "      <td>-0.166413</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -922,7 +966,9 @@
        "      <td>-56.622726</td>\n",
        "      <td>-0.181272</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -943,7 +989,9 @@
        "      <td>-58.489292</td>\n",
        "      <td>-0.181986</td>\n",
        "      <td>0.264624</td>\n",
+       "      <td>0.284062</td>\n",
        "      <td>photobio_1100_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -964,7 +1012,9 @@
        "      <td>NaN</td>\n",
        "      <td>-0.128153</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
+       "      <td>photobioreactor</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -973,7 +1023,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10104 rows × 18 columns</p>\n",
+       "<p>10104 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1016,33 +1066,33 @@
        "10102     321.394594    -58.489292 -0.181986                0.264624   \n",
        "10103            NaN           NaN -0.128153                0.000000   \n",
        "\n",
-       "              condition      dataset   strain            species organism_key  \\\n",
-       "0      photobio_27.5_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "1      photobio_27.5_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "2      photobio_27.5_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "3      photobio_27.5_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "4      photobio_27.5_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "...                 ...          ...      ...                ...          ...   \n",
-       "10099  photobio_1100_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "10100  photobio_1100_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "10101  photobio_1100_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "10102  photobio_1100_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
-       "10103  photobio_1100_uE  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803   \n",
+       "       fraction_transmembrane_C         condition      growth_mode  \\\n",
+       "0                      0.183855  photobio_27.5_uE  photobioreactor   \n",
+       "1                      0.180556  photobio_27.5_uE  photobioreactor   \n",
+       "2                      0.235991  photobio_27.5_uE  photobioreactor   \n",
+       "3                      0.204536  photobio_27.5_uE  photobioreactor   \n",
+       "4                      0.000000  photobio_27.5_uE  photobioreactor   \n",
+       "...                         ...               ...              ...   \n",
+       "10099                  0.000000  photobio_1100_uE  photobioreactor   \n",
+       "10100                  0.000000  photobio_1100_uE  photobioreactor   \n",
+       "10101                  0.000000  photobio_1100_uE  photobioreactor   \n",
+       "10102                  0.284062  photobio_1100_uE  photobioreactor   \n",
+       "10103                  0.000000  photobio_1100_uE  photobioreactor   \n",
        "\n",
-       "       growth_rate_hr  \n",
-       "0               0.025  \n",
-       "1               0.025  \n",
-       "2               0.025  \n",
-       "3               0.025  \n",
-       "4               0.025  \n",
-       "...               ...  \n",
-       "10099           0.930  \n",
-       "10100           0.930  \n",
-       "10101           0.930  \n",
-       "10102           0.930  \n",
-       "10103           0.930  \n",
+       "           dataset   strain            species organism_key  growth_rate_hr  \n",
+       "0      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
+       "1      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
+       "2      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
+       "3      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
+       "4      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
+       "...            ...      ...                ...          ...             ...  \n",
+       "10099  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
+       "10100  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
+       "10101  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
+       "10102  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
+       "10103  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
        "\n",
-       "[10104 rows x 18 columns]"
+       "[10104 rows x 20 columns]"
       ]
      },
      "execution_count": 8,
