--- a/notebooks/03_CyanoProteomeNOSC.ipynb
+++ b/notebooks/03_CyanoProteomeNOSC.ipynb
@@ -15,6 +15,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -226,17 +227,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'P74303', 'P73037', 'P74195:P74627:P74059', 'Q6YRS8:P73838', 'P74732', 'P73734', 'P73009:P74083', 'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6', 'Q6YRW7:Q6ZEM6', 'Q6ZEM5:Q6YRW8'}\n",
+      "{'P74732', 'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6', 'P73734', 'Q6ZEM5:Q6YRW8', 'P74195:P74627:P74059', 'Q6YRS8:P73838', 'Q6YRW7:Q6ZEM6', 'P74303', 'P73009:P74083', 'P73037'}\n",
       "10 not found\n",
       "Adding fictional IDs for those representing a mixture of isoforms\n",
+      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
+      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
       "Adding fictional protein for P74195:P74627:P74059 representing 3 isoforms\n",
       "Adding fictional protein for Q6YRS8:P73838 representing 2 isoforms\n",
-      "Adding fictional protein for P73009:P74083 representing 2 isoforms\n",
-      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
       "Adding fictional protein for Q6YRW7:Q6ZEM6 representing 2 isoforms\n",
-      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
+      "Adding fictional protein for P73009:P74083 representing 2 isoforms\n",
       "After update, missing 4 IDs\n",
-      "{'P74303', 'P73037', 'P73734', 'P74732'}\n"
+      "{'P74732', 'P73734', 'P73037', 'P74303'}\n"
      ]
     }
    ],
@@ -363,6 +364,7 @@
        "      <th>fraction_transmembrane_C</th>\n",
        "      <th>condition</th>\n",
        "      <th>growth_mode</th>\n",
+       "      <th>stress</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -383,6 +385,7 @@
        "      <td>0.183855</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -401,6 +404,7 @@
        "      <td>0.180556</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -419,6 +423,7 @@
        "      <td>0.235991</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -437,6 +442,7 @@
        "      <td>0.204536</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -455,6 +461,7 @@
        "      <td>0.000000</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -482,12 +489,12 @@
        "3 -27221.185676 -0.192627                0.195652                  0.204536   \n",
        "4   -363.397791 -0.182331                0.000000                  0.000000   \n",
        "\n",
-       "          condition      growth_mode  \n",
-       "0  photobio_27.5_uE  photobioreactor  \n",
-       "1  photobio_27.5_uE  photobioreactor  \n",
-       "2  photobio_27.5_uE  photobioreactor  \n",
-       "3  photobio_27.5_uE  photobioreactor  \n",
-       "4  photobio_27.5_uE  photobioreactor  "
+       "          condition      growth_mode  stress  \n",
+       "0  photobio_27.5_uE  photobioreactor   False  \n",
+       "1  photobio_27.5_uE  photobioreactor   False  \n",
+       "2  photobio_27.5_uE  photobioreactor   False  \n",
+       "3  photobio_27.5_uE  photobioreactor   False  \n",
+       "4  photobio_27.5_uE  photobioreactor   False  "
       ]
      },
      "execution_count": 5,
@@ -696,7 +703,7 @@
     "\n",
     "cond_NOSC = Ce_total.sum()/NC_total.sum()\n",
     "conds_df['proteome_NOSC'] = cond_NOSC\n",
-    "conds_df.to_csv('../data/proteomes/Synechocystis/Zavrel_proteome_NOSC.csv', index=False)\n",
+    "conds_df.to_csv('../data/proteomes/Synechocystis/Zavrel_proteome_NOSC.csv')\n",
     "\n",
     "conds_df"
    ]
@@ -716,7 +723,7 @@
     "tmp['organism_key'] = 'PCC6803'\n",
     "tmp['growth_rate_hr'] = conds_df.loc[tmp.red_light_intensity_uE_m_s].growth_rate_hr.values\n",
     "\n",
-    "tmp.to_csv('../data/proteomes/Synechocystis/Zavrel_protein_measurements.csv', index=False)"
+    "tmp.to_csv('../data/proteomes/Synechocystis/Zavrel_protein_measurements.csv')"
    ]
   },
   {
@@ -755,11 +762,12 @@
        "      <th>Ce_per</th>\n",
        "      <th>NC_total</th>\n",
        "      <th>Ce_total</th>\n",
-       "      <th>NOSC</th>\n",
+       "      <th>...</th>\n",
        "      <th>fraction_transmembrane</th>\n",
        "      <th>fraction_transmembrane_C</th>\n",
        "      <th>condition</th>\n",
        "      <th>growth_mode</th>\n",
+       "      <th>stress</th>\n",
        "      <th>dataset</th>\n",
        "      <th>strain</th>\n",
        "      <th>species</th>\n",
@@ -780,11 +788,12 @@
        "      <td>-403.72</td>\n",
        "      <td>180539.099460</td>\n",
        "      <td>-28152.663281</td>\n",
-       "      <td>-0.155937</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.177515</td>\n",
        "      <td>0.183855</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -803,11 +812,12 @@
        "      <td>-63.67</td>\n",
        "      <td>13017.430080</td>\n",
        "      <td>-1918.564290</td>\n",
-       "      <td>-0.147384</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.172840</td>\n",
        "      <td>0.180556</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -826,11 +836,12 @@
        "      <td>-358.02</td>\n",
        "      <td>95046.836480</td>\n",
        "      <td>-18334.411852</td>\n",
-       "      <td>-0.192899</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.241477</td>\n",
        "      <td>0.235991</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -849,11 +860,12 @@
        "      <td>-450.17</td>\n",
        "      <td>141315.305160</td>\n",
        "      <td>-27221.185676</td>\n",
-       "      <td>-0.192627</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.195652</td>\n",
        "      <td>0.204536</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -872,11 +884,12 @@
        "      <td>-289.36</td>\n",
        "      <td>1993.061564</td>\n",
        "      <td>-363.397791</td>\n",
-       "      <td>-0.182331</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>photobio_27.5_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -885,6 +898,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -918,11 +932,12 @@
        "      <td>-133.93</td>\n",
        "      <td>327.310870</td>\n",
        "      <td>-43.019377</td>\n",
-       "      <td>-0.131433</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -941,11 +956,12 @@
        "      <td>-301.54</td>\n",
        "      <td>302.202714</td>\n",
        "      <td>-50.290401</td>\n",
-       "      <td>-0.166413</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -964,11 +980,12 @@
        "      <td>-383.21</td>\n",
        "      <td>312.362526</td>\n",
        "      <td>-56.622726</td>\n",
-       "      <td>-0.181272</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -987,11 +1004,12 @@
        "      <td>-361.97</td>\n",
        "      <td>321.394594</td>\n",
        "      <td>-58.489292</td>\n",
-       "      <td>-0.181986</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.264624</td>\n",
        "      <td>0.284062</td>\n",
        "      <td>photobio_1100_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -1010,11 +1028,12 @@
        "      <td>-205.43</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-0.128153</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>photobio_1100_uE</td>\n",
        "      <td>photobioreactor</td>\n",
+       "      <td>False</td>\n",
        "      <td>zavrel_2019</td>\n",
        "      <td>PCC6803</td>\n",
        "      <td>Synechocystis sp.</td>\n",
@@ -1023,7 +1042,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10104 rows × 20 columns</p>\n",
+       "<p>10104 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1053,46 +1072,46 @@
        "10102                       1100         0.161586  1989.0 -361.97   \n",
        "10103                       1100              NaN  1603.0 -205.43   \n",
        "\n",
-       "            NC_total      Ce_total      NOSC  fraction_transmembrane  \\\n",
-       "0      180539.099460 -28152.663281 -0.155937                0.177515   \n",
-       "1       13017.430080  -1918.564290 -0.147384                0.172840   \n",
-       "2       95046.836480 -18334.411852 -0.192899                0.241477   \n",
-       "3      141315.305160 -27221.185676 -0.192627                0.195652   \n",
-       "4        1993.061564   -363.397791 -0.182331                0.000000   \n",
-       "...              ...           ...       ...                     ...   \n",
-       "10099     327.310870    -43.019377 -0.131433                0.000000   \n",
-       "10100     302.202714    -50.290401 -0.166413                0.000000   \n",
-       "10101     312.362526    -56.622726 -0.181272                0.000000   \n",
-       "10102     321.394594    -58.489292 -0.181986                0.264624   \n",
-       "10103            NaN           NaN -0.128153                0.000000   \n",
+       "            NC_total      Ce_total  ...  fraction_transmembrane  \\\n",
+       "0      180539.099460 -28152.663281  ...                0.177515   \n",
+       "1       13017.430080  -1918.564290  ...                0.172840   \n",
+       "2       95046.836480 -18334.411852  ...                0.241477   \n",
+       "3      141315.305160 -27221.185676  ...                0.195652   \n",
+       "4        1993.061564   -363.397791  ...                0.000000   \n",
+       "...              ...           ...  ...                     ...   \n",
+       "10099     327.310870    -43.019377  ...                0.000000   \n",
+       "10100     302.202714    -50.290401  ...                0.000000   \n",
+       "10101     312.362526    -56.622726  ...                0.000000   \n",
+       "10102     321.394594    -58.489292  ...                0.264624   \n",
+       "10103            NaN           NaN  ...                0.000000   \n",
        "\n",
-       "       fraction_transmembrane_C         condition      growth_mode  \\\n",
-       "0                      0.183855  photobio_27.5_uE  photobioreactor   \n",
-       "1                      0.180556  photobio_27.5_uE  photobioreactor   \n",
-       "2                      0.235991  photobio_27.5_uE  photobioreactor   \n",
-       "3                      0.204536  photobio_27.5_uE  photobioreactor   \n",
-       "4                      0.000000  photobio_27.5_uE  photobioreactor   \n",
-       "...                         ...               ...              ...   \n",
-       "10099                  0.000000  photobio_1100_uE  photobioreactor   \n",
-       "10100                  0.000000  photobio_1100_uE  photobioreactor   \n",
-       "10101                  0.000000  photobio_1100_uE  photobioreactor   \n",
-       "10102                  0.284062  photobio_1100_uE  photobioreactor   \n",
-       "10103                  0.000000  photobio_1100_uE  photobioreactor   \n",
+       "       fraction_transmembrane_C         condition      growth_mode stress  \\\n",
+       "0                      0.183855  photobio_27.5_uE  photobioreactor  False   \n",
+       "1                      0.180556  photobio_27.5_uE  photobioreactor  False   \n",
+       "2                      0.235991  photobio_27.5_uE  photobioreactor  False   \n",
+       "3                      0.204536  photobio_27.5_uE  photobioreactor  False   \n",
+       "4                      0.000000  photobio_27.5_uE  photobioreactor  False   \n",
+       "...                         ...               ...              ...    ...   \n",
+       "10099                  0.000000  photobio_1100_uE  photobioreactor  False   \n",
+       "10100                  0.000000  photobio_1100_uE  photobioreactor  False   \n",
+       "10101                  0.000000  photobio_1100_uE  photobioreactor  False   \n",
+       "10102                  0.284062  photobio_1100_uE  photobioreactor  False   \n",
+       "10103                  0.000000  photobio_1100_uE  photobioreactor  False   \n",
        "\n",
-       "           dataset   strain            species organism_key  growth_rate_hr  \n",
-       "0      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
-       "1      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
-       "2      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
-       "3      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
-       "4      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.025  \n",
-       "...            ...      ...                ...          ...             ...  \n",
-       "10099  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
-       "10100  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
-       "10101  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
-       "10102  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
-       "10103  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803           0.930  \n",
+       "           dataset   strain            species organism_key growth_rate_hr  \n",
+       "0      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.025  \n",
+       "1      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.025  \n",
+       "2      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.025  \n",
+       "3      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.025  \n",
+       "4      zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.025  \n",
+       "...            ...      ...                ...          ...            ...  \n",
+       "10099  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.930  \n",
+       "10100  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.930  \n",
+       "10101  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.930  \n",
+       "10102  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.930  \n",
+       "10103  zavrel_2019  PCC6803  Synechocystis sp.      PCC6803          0.930  \n",
        "\n",
-       "[10104 rows x 20 columns]"
+       "[10104 rows x 21 columns]"
       ]
      },
      "execution_count": 8,
