add comment about S2-S6 interdependence.

--- a/akshit_notebooks/006_fig1_plots.ipynb
+++ b/akshit_notebooks/006_fig1_plots.ipynb
@@ -646,6 +646,8 @@
     "cs = sns.color_palette('Blues_r', 5, desat=0.5)\n",
     "legend_elements = []\n",
     "\n",
+    "# Note: ZC_org is really S2 and not ZC.\n",
+    "# Also: can S2 change without altering S6??\n",
     "for indx, ZC_org in enumerate(np.linspace(2.0, 1.0, 3)):\n",
     "    phianas = df_1d.iloc[indx]['phianas']\n",
     "    mus = df_1d.iloc[indx]['mus']\n",
